# module-v8

./: CMakeLists.txt  LICENSE  README.md  qore-v8-module.spec
.github/workflows/: pull_request.yml
docs/: mainpage.dox.tmpl
qlib/TypeScriptActionInterface/: JavaScriptProgramPool.qc  TypeScriptActionApiDataProvider.qc  TypeScriptActionApiWithSchemaDataProvider.qc  TypeScriptActionAppDataProvider.qc  TypeScriptActionInterface.qc  TypeScriptActionInterface.qm  TypeScriptActionInterfacePriv.qc  TypeScriptAppRestConnection.qc
src/: QC_JavaScriptObject.h  QC_JavaScriptObject.qpp  QC_JavaScriptProgram.h  QC_JavaScriptProgram.qpp  QC_JavaScriptPromise.h  QC_JavaScriptPromise.qpp  QoreV8CallReference.cpp  QoreV8CallReference.h  QoreV8CallStack.cpp  QoreV8Object.cpp  QoreV8Object.h  QoreV8Program.cpp  QoreV8Program.h  QoreV8Promise.cpp  QoreV8Promise.h  QoreV8StackLocationHelper.cpp  QoreV8StackLocationHelper.h  v8-module.cpp  v8-module.h
test/: example.js  test.js  ts-action-interface.qtest  v8.qtest
ts/: .gitignore  jest.config.js  jest.config.js.map  package.json  tsconfig.build.json  tsconfig.json  tsconfig.tests.json
ts/src/: global.d.ts  index.ts  jest.config.ts
ts/src/ActionsCatalogue/: index.ts  mock.ts
ts/src/apps/asana/: constants.ts  index.ts
ts/src/apps/asana/actions/attachments/: delete-attachment.ts  get-attachment.ts  get-attachments.ts  upload-attachment.ts
ts/src/apps/asana/actions/custom-fields/: create-custom-field-enum.ts  create-custom-field.ts  delete-custom-field.ts  get-custom-field.ts  insert-custom-field-enum.ts  update-custom-field.ts
ts/src/apps/asana/actions/events/: get-events.ts
ts/src/apps/asana/actions/goals/: add-goal-followers.ts  create-goal-metric.ts  create-goal.ts  delete-goal.ts  get-goal-parent-goals.ts  get-goal.ts  get-goals.ts  remove-goal-followers.ts  set-goal-metric-value.ts  update-goal.ts
ts/src/apps/asana/actions/jobs/: get-job.ts
ts/src/apps/asana/actions/portfolios/: add-portfolio-custom-field.ts  add-portfolio-item.ts  add-portfolio-members.ts  create-portfolio.ts  delete-portfolio.ts  get-portfolio-items.ts  get-portfolio.ts  get-portfolios.ts  remove-portfolio-custom-field.ts  remove-portfolio-item.ts  remove-portfolio-member.ts  update-portfolio.ts
ts/src/apps/asana/actions/projects/: add-project-custom-field.ts  add-project-followers.ts  add-project-members.ts  create-project-brief.ts  create-project-section.ts  create-project-status.ts  create-project.ts  delete-project.ts  duplicate-project.ts  get-project-sections.ts  get-project-statuses.ts  get-project-task-count.ts  get-project-tasks.ts  get-project.ts  get-projects.ts  insert-project-section.ts  remove-project-custom-field.ts  remove-project-followers.ts  remove-project-members.ts  save-project-as-template.ts  update-project.ts
ts/src/apps/asana/actions/sections/: add-section-task.ts  delete-section.ts  get-section.ts  update-section.ts
ts/src/apps/asana/actions/stories/: delete-story.ts  get-story.ts  update-story.ts
ts/src/apps/asana/actions/tags/: create-tag.ts  delete-tag.ts  get-tag.ts  get-tags.ts  update-tag.ts
ts/src/apps/asana/actions/tasks/: add-task-dependencies.ts  add-task-dependents.ts  add-task-followers.ts  add-task-project.ts  add-task-tag.ts  create-task-story.ts  create-task-subtask.ts  create-task.ts  duplicate-task.ts  get-task-dependencies.ts  get-task-dependents.ts  get-task-projects.ts  get-task-stories.ts  get-task-subtasks.ts  get-task-tags.ts  get-task.ts  get-tasks.ts  remove-task-dependencies.ts  remove-task-dependents.ts  remove-task-project.ts  remove-task-tag.ts  update-task.ts
ts/src/apps/asana/actions/teams/: add-user-to-team.ts  create-team-project.ts  create-team.ts  get-team-project-templates.ts  get-team-projects.ts  get-team-users.ts  get-team.ts  remove-user-from-team.ts  update-team.ts
ts/src/apps/asana/actions/users/: get-user-favorites.ts  get-user-task-list.ts  get-user-teams.ts  get-user-workspace-memberships.ts  get-user.ts  get-users.ts
ts/src/apps/asana/actions/webhooks/: create-webhook.ts  delete-webhook.ts  get-webhook.ts  get-webhooks.ts  update-webhook.ts
ts/src/apps/asana/actions/workspaces/: add-workspace-project.ts  add-workspace-tag.ts  add-workspace-user.ts  get-workspace-memberships.ts  get-workspace-projects.ts  get-workspace-tags.ts  get-workspace-teams.ts  get-workspace-users.ts  get-workspace.ts  get-workspaces.ts  remove-workspace-user.ts  search-workspace-tasks.ts  update-workspace.ts
ts/src/apps/esignature/: constants.ts  index.ts
ts/src/apps/github/: index.ts
ts/src/apps/hubspot/: index.ts
ts/src/apps/hubspot/actions/users/: get-user.ts  get-users.ts
ts/src/apps/jira/: constants.ts  index.ts
ts/src/apps/notion/: index.ts
ts/src/apps/notion/actions/blocks/: append-block-children.ts  delete-block.ts  get-block-children.ts  get-block.ts  update-block.ts
ts/src/apps/notion/actions/comments/: create-comment.ts  get-comments.ts
ts/src/apps/notion/actions/databases/: create-database.ts  filter-database.ts  get-database.ts  update-database.ts
ts/src/apps/notion/actions/pages/: archive-page.ts  create-page.ts  get-page-property.ts  get-page.ts
ts/src/apps/notion/actions/search/: search.ts
ts/src/apps/stripe/: constants.ts  index.ts
ts/src/apps/zendesk/: client.ts  index.ts
ts/src/apps/zendesk/actions/: options.ts
ts/src/example/: action.ts
ts/src/global/helpers/: index.ts
ts/src/global/models/: qore.ts
ts/src/i18n/: i18n-types.ts
ts/src/i18n/en/: index.ts
ts/src/pieces/: index.ts  piecesCatalogue.ts
ts/src/pieces/common/constants/: index.ts
ts/src/pieces/notion/: index.ts
ts/src/pieces/slack/: index.ts
ts/src/qtests/: QTester.ts  asana.qtest.ts  esignature.qtest.ts  github.qtest.ts  jira.qtest.ts  stripe.qtest.ts  utils.ts  zendesk.qtest.ts
ts/src/schemas/: asana.swagger.json  jira.swagger.json  stripe.swagger.json  zendesk.swagger.json  zendesk.swagger.yaml
ts/src/tests/: actions-catalogue.test.ts  dropbox-piece.test.ts  helpers.test.ts  notion-piece.plsfix.ts  notion-piece.test.ts  utils.ts
(+34 files in other folders)
